# rs-kube-poc

./: .gitignore  Cargo.toml  README.md  config.sh  connect.sh  forward.sh  install_minikube.sh
.bruno.database-provider/: bruno.json  collection.bru  create database.bru
src/: main.rs
src/controllers/: database.rs
src/structs/: database_provider.rs  mod.rs
src/utils/: log.rs
