[package]
name = "database-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
kube = { version = "3.0.1", features = ["runtime", "derive"] }
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
schemars = "1.2.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "json",
    "registry",
    "smallvec",
] }
yansi = "0.5.1"

[profile.dev]
debug = 0
opt-level = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]


[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
